--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ input{
     height: 100px;
 }
 #Popover{
+    color:#396664;
     anchorOrigin:{
         vertical: 'top';
         horizontal: 'center';
